chore: update font family to Source Sans 3

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
 @import "tailwindcss";
-@tailwind utilities;
 
+@tailwind utilities;
 @keyframes moving {
   0% {
     left: -20px;
@@ -8,6 +9,10 @@
   100% {
     left: 100%;
   }
+}
+
+body {
+  font-family: "Source Sans 3", sans-serif;
 }
 
 @keyframes marquee {
